# sc2-uqm

./: .gitignore  .gitmodules  CMakeLists.txt
sc2/: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  INSTALL  build.vars.in
sc2/cmake/: config_unix.h
sc2/content/: uqm.rmp  version
sc2/content/addons/3dovoice/arilou/: arilou.txt
sc2/content/addons/3dovoice/chmmr/: chmmr.ts
sc2/content/addons/3dovoice/commander/: commander.ts
sc2/content/addons/3dovoice/melnorme/: melnorme.ts  melnorme.txt
sc2/content/addons/3dovoice/orz/: orz.ts
sc2/content/addons/3dovoice/pkunk/: pkunk.ts
sc2/content/addons/3dovoice/safeones/: safeones.ts
sc2/content/addons/3dovoice/shofixti/: shofixti.ts
sc2/content/addons/3dovoice/slylandro/: slylandro.ts
sc2/content/addons/3dovoice/starbase/: starbase.ts  starbase.txt
sc2/content/addons/3dovoice/supox/: supox.ts
sc2/content/addons/3dovoice/syreen/: syreen.txt
sc2/content/addons/3dovoice/talkingpet/: talkingpet.ts
sc2/content/addons/3dovoice/thraddash/: thraddash.ts
sc2/content/addons/3dovoice/umgah/: umgah.ts
sc2/content/addons/3dovoice/utwig/: utwig.ts  utwig.txt
sc2/content/addons/3dovoice/yehat/: yehat.ts
sc2/content/addons/3dovoice/zoqfotpik/: zoqfotpik.ts
sc2/content/base/: gamestrings.txt
sc2/content/base/comm/commander/: commander.txt
sc2/content/base/comm/melnorme/: melnorme.txt
sc2/content/base/comm/orz/: orz.txt
sc2/content/base/comm/pkunk/: pkunk.txt
sc2/content/base/comm/safeones/: safeones.txt
sc2/content/base/comm/shofixti/: shofixti.txt
sc2/content/base/comm/slylandro/: slylandro.txt
sc2/content/base/comm/starbase/: starbase.txt
sc2/content/base/comm/syreen/: syreen.txt
sc2/content/base/comm/talkingpet/: talkingpet.txt
sc2/content/base/comm/thraddash/: thraddash.txt
sc2/content/base/comm/umgah/: umgah.txt
sc2/content/base/comm/utwig/: utwig.txt
sc2/content/base/comm/yehat/: yehat.txt
sc2/content/base/comm/zoqfotpik/: zoqfotpik.txt
sc2/content/base/cutscene/credits/: credits.txt
sc2/content/base/cutscene/ending/: final.txt
sc2/content/base/cutscene/intro/: intro.txt
sc2/content/base/script/initgame/: README.txt
sc2/content/base/ui/: setupmenu.txt
sc2/doc/devel/: lua  savefile
sc2/src/: config_unix.h.in  config_vc6.h  config_win.h.in  endian_uqm.h  options.c  port.c  port.h  types.h  uqm.c  uqmversion.h
sc2/src/darwin/: SDLMain.m
sc2/src/libs/: Makeinfo  cdplib.h  compiler.h  declib.h  file.h  gfxlib.h  inplib.h  mathlib.h  md5.h  memlib.h  net.h  reslib.h  scriptlib.h  sndlib.h  strlib.h  tasklib.h  threadlib.h  timelib.h  uio.h  uioutils.h  vidlib.h
sc2/src/libs/callback/: alarm.c  alarm.h  callback.h
sc2/src/libs/graphics/: gfx_common.h
sc2/src/libs/graphics/sdl/: Makeinfo  canvas.c  opengl.c  opengl.h  palette.h  primitives.c  pure.c  pure.h  rotozoom.c  scalers.c  sdl1_common.c  sdl2_common.c  sdl2_pure.c  sdl_common.c  sdl_common.h
sc2/src/libs/input/sdl/: input.c  keynames.c  keynames.h  vcontrol.c  vcontrol.h
sc2/src/libs/lua/: luauqm.c  luauqm.h  scriptres.h
sc2/src/libs/math/: random.h
sc2/src/libs/network/: wspiapiwrap.h
sc2/src/libs/network/socket/: socket.h
sc2/src/libs/resource/: index.h
sc2/src/libs/sound/: sndintrn.h  sound.h
sc2/src/libs/sound/decoders/: decoder.h
sc2/src/libs/sound/openal/: audiodrv_openal.h
sc2/src/libs/strings/: getstr.c  stringhashtable.c  stringhashtable.h  strintrn.h
sc2/src/libs/uio/: charhashtable.h  debug.h  gphys.h  io.h  match.h  uiostream.h  uioutils.h  utils.c
sc2/src/symbian/: config.h
sc2/src/uqm/: Makeinfo  battle.h  battlecontrols.h  build.h  clock.h  cnctdlg.h  coderes.h  collide.h  colors.h  comm.c  comm.h  commanim.h  commglue.c  commglue.h  controls.h  credits.h  demo.h  displist.h  element.h  encount.c  encount.h  flash.h  fmv.h  gameev.h  gameopt.c  gameopt.h  gamestr.h  globdata.c  globdata.h  grpinfo.h  hyper.c  hyper.h  init.h  intel.h  iscriptres.h  load.c  load.h  load_legacy.c  master.h  menustat.h  (+23 more)
sc2/src/uqm/comm/arilou/: strings.h
sc2/src/uqm/comm/blackur/: strings.h
sc2/src/uqm/comm/chmmr/: strings.h
sc2/src/uqm/comm/comandr/: strings.h
sc2/src/uqm/comm/druuge/: strings.h
sc2/src/uqm/comm/ilwrath/: strings.h
sc2/src/uqm/comm/melnorm/: strings.h
sc2/src/uqm/comm/mycon/: strings.h
sc2/src/uqm/comm/orz/: strings.h
sc2/src/uqm/comm/pkunk/: strings.h
sc2/src/uqm/comm/rebel/: strings.h
sc2/src/uqm/comm/shofixt/: strings.h
sc2/src/uqm/comm/slyhome/: strings.h
sc2/src/uqm/comm/slyland/: strings.h
sc2/src/uqm/comm/spahome/: strings.h
sc2/src/uqm/comm/spathi/: strings.h
sc2/src/uqm/comm/starbas/: starbas.c  strings.h
sc2/src/uqm/comm/supox/: strings.h
sc2/src/uqm/comm/syreen/: strings.h
sc2/src/uqm/comm/talkpet/: strings.h
sc2/src/uqm/comm/thradd/: strings.h
sc2/src/uqm/comm/umgah/: strings.h
sc2/src/uqm/comm/urquan/: strings.h
sc2/src/uqm/comm/utwig/: strings.h
sc2/src/uqm/comm/vux/: strings.h
sc2/src/uqm/comm/yehat/: strings.h
sc2/src/uqm/comm/zoqfot/: strings.h
sc2/src/uqm/lua/: Makeinfo  luacomm.c  luacomm.h  luaevent.c  luaevent.h  luainit.c  luainit.h  luastate.c  luastate.h
sc2/src/uqm/lua/luafuncs/: Makeinfo  commfuncs.c  commfuncs.h  customfuncs.c  customfuncs.h  eventfuncs.c  eventfuncs.h  logfuncs.c  logfuncs.h  statefuncs.c  statefuncs.h
sc2/src/uqm/planets/: elemdata.h  lander.h  lifeform.h  plandata.h  planets.h  scan.h  sundata.h
sc2/src/uqm/ships/androsyn/: androsyn.c
sc2/src/uqm/ships/arilou/: arilou.c
sc2/src/uqm/ships/blackurq/: blackurq.c
sc2/src/uqm/ships/chenjesu/: chenjesu.c
sc2/src/uqm/ships/chmmr/: chmmr.c
sc2/src/uqm/ships/druuge/: druuge.c
sc2/src/uqm/ships/human/: human.c
sc2/src/uqm/ships/ilwrath/: ilwrath.c
sc2/src/uqm/ships/lastbat/: lastbat.c
sc2/src/uqm/ships/melnorme/: melnorme.c
sc2/src/uqm/ships/mmrnmhrm/: mmrnmhrm.c
sc2/src/uqm/ships/mycon/: mycon.c
sc2/src/uqm/ships/orz/: orz.c
sc2/src/uqm/ships/pkunk/: pkunk.c
sc2/src/uqm/ships/shofixti/: shofixti.c
sc2/src/uqm/ships/spathi/: spathi.c
sc2/src/uqm/supermelee/: loadmele.h  melee.h  pickmele.h
(+360 files in other folders)
